--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sufrontend",
   "version": "0.1.0",
+  "homepage": "https://GhulamShubhani.github.io/Ecom",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -28,6 +29,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -49,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
